--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,6 @@
 {
-  "name": "nrw/nrw_theme",
-  "type": "drupal-theme",
-  "version": "0.1",
-  "dist": {
-    "url": "git@bitbucket.org:publicplan/degov_nrw_theme.git",
-    "type": "vcs"
-  },
+  "name": "degov/nrw_theme",
+  "description": "deGov - NRW Theme",
   "require": {
     "drupal/bootstrap": "^3.3"
   }
