--- a/nrw_base_theme.libraries.yml
+++ b/nrw_base_theme.libraries.yml
@@ -3,6 +3,7 @@ theme-assets:
     theme:
       public/css/bootstrap.css: {}
       public/css/style.css: {}
+      public/css/print.css: {}
   js:
     public/js/bundle.js: {}
 
