--- a/STARTER_KIT/STARTER_KIT.info.yml
+++ b/STARTER_KIT/STARTER_KIT.info.yml
@@ -1,30 +1,20 @@
 core: 8.x
 type: theme
-base theme: degov_nrw_theme
+base theme: nrw_base_theme
 
 name: 'NRW - STARTER_KIT'
 description: 'Starter kit for a theme for a ressort page in NRW. Based on the deGov distribution.'
 package: 'Bootstrap'
 
 regions:
-  page_intro: 'Page intro'
-  navigation: 'Navigation'
-  navigation_collapsible: 'Navigation (Collapsible)'
-  navigation_branding: 'Branding region in the navigation bar'
-  header: 'Top Bar'
-  highlighted: 'Highlighted'
-  help: 'Help'
+  header_region: 'Header'
   content: 'Content'
   sidebar_first: 'Primary'
   sidebar_second: 'Secondary'
-  footer: 'Footer'
-  page_outro: 'Page outro'
-  page_top: 'Page top'
-  page_bottom: 'Page bottom'
 
 libraries:
   - 'STARTER_KIT/theme-assets'
 
 stylesheets-remove:
-  - 'themes/contrib/degov_nrw_theme/public/css/bootstrap.css'
-  - 'themes/contrib/degov_nrw_theme/public/css/style.css'
+  - 'themes/nrw/nrw_base_theme/public/css/bootstrap.css'
+  - 'themes/nrw/nrw_base_theme/public/css/style.css'
