--- a/config/optional/block.block.degov_base_theme_footer.yml
+++ b/config/optional/block.block.degov_base_theme_footer.yml
@@ -6,12 +6,12 @@ dependencies:
   module:
     - system
   theme:
-    - nrw_base_theme
+    - degov_base_theme
   enforced:
     theme:
-      - nrw_base_theme
-id: nrw_base_theme_footer
-theme: nrw_base_theme
+      - degov_base_theme
+id: degov_base_theme_footer
+theme: degov_base_theme
 region: header_region
 weight: -2
 provider: null
