--- a/config/optional/block.block.degov_base_theme_content.yml
+++ b/config/optional/block.block.degov_base_theme_content.yml
@@ -4,12 +4,12 @@ dependencies:
   module:
     - system
   theme:
-    - nrw_base_theme
+    - degov_base_theme
   enforced:
     theme:
-      - nrw_base_theme
-id: nrw_base_theme_content
-theme: nrw_base_theme
+      - degov_base_theme
+id: degov_base_theme_content
+theme: degov_base_theme
 region: content
 weight: -3
 provider: null
