--- a/config/optional/block.block.degov_base_theme_local_actions.yml
+++ b/config/optional/block.block.degov_base_theme_local_actions.yml
@@ -2,14 +2,14 @@ langcode: de
 status: true
 dependencies:
   theme:
-    - nrw_base_theme
+    - degov_base_theme
   theme:
-    - nrw_base_theme
+    - degov_base_theme
   enforced:
     theme:
-      - nrw_base_theme
-id: nrw_base_theme_local_actions
-theme: nrw_base_theme
+      - degov_base_theme
+id: degov_base_theme_local_actions
+theme: degov_base_theme
 region: content
 weight: -4
 provider: null
