--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
     "name": "degov/degov_base_theme",
+    "description": "deGov - Subtheme",
     "type": "drupal-theme",
-    "version": "0.1",
-    "dist": {
-        "url": "git@github.com:deGov/degov_base_theme.git",
-        "type": "vcs"
+    "require": {
+      "drupal/bootstrap": "^3.3"
     }
 }
