Fixes base theme rebased with 1.10

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "degov/degov_theme",
-  "description": "deGov - Subtheme",
+  "name": "degov/base_theme",
+  "description": "deGov - Base Theme",
   "require": {
     "drupal/bootstrap": "^3.3"
   }
