--- a/STARTER_KIT/STARTER_KIT.info.yml
+++ b/STARTER_KIT/STARTER_KIT.info.yml
@@ -2,8 +2,8 @@ core: 8.x
 type: theme
 base theme: degov_base_theme
 
-name: 'deGov - STARTER_KIT'
-description: 'Starter kit for a theme for a ressort page in deGov. Based on the deGov distribution.'
+name: 'DEGOV - STARTER_KIT'
+description: 'Starter kit for a theme for a ressort page in NRW. Based on the deGov distribution.'
 package: 'Bootstrap'
 
 regions:
@@ -16,5 +16,4 @@ libraries:
   - 'STARTER_KIT/theme-assets'
 
 stylesheets-remove:
-  - 'themes/degov/degov_base_theme/public/css/bootstrap.css'
-  - 'themes/degov/degov_base_theme/public/css/style.css'
+
