--- a/degov_base_theme.info.yml
+++ b/degov_base_theme.info.yml
@@ -7,6 +7,7 @@ description: 'Base theme for the deGov distribution. Depends on Bootstrap theme.
 package: 'Bootstrap'
 
 regions:
+  top_navigation: 'Top navigation'
   branding_region: 'Branding'
   header_region: 'Header'
   content: 'Content'
